Fetch entry prints cursor id. If statement is not in the file, prints info.

--- a/TraceParser/TraceParser.csproj
+++ b/TraceParser/TraceParser.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Parser\Entries\CloseEntry.cs" />
     <Compile Include="Parser\Entries\ExecEntry.cs" />
     <Compile Include="Parser\Entries\FetchEntry.cs" />
+    <Compile Include="Parser\Entries\ParseErrorEntry.cs" />
     <Compile Include="Parser\OptimizerGoal.cs" />
     <Compile Include="Parser\OracleDatatype.cs" />
     <Compile Include="Parser\Entries\UnrecognizedEntry.cs" />
